--- a/css/menu.css
+++ b/css/menu.css
@@ -10,19 +10,33 @@
 .menu a {
   color: inherit;
   line-height: 26px;
-  text-decoration: none;
 }
 
 .menu-item {
   display: inline-block;
   line-height: 1;
 }
+@media (max-width: 26em) {
+  .menu-item {
+    font-size: 16px;
+  }
+}
+
+.menu-item:hover {
+  border-bottom: 2px solid #adc2cc;
+  margin-bottom: -2px;
+}
 
 .menu-home {
   flex-shrink: 0;
   font-weight: bold;
   font-size: 21px;
-  width: auto;
+  width: 100%;
+}
+@media (min-width: 60em) {
+  .menu-home {
+    width: auto;
+  }
 }
 
 .menu-items {
@@ -32,5 +46,9 @@
   align-items: center;
   max-width: 550px;
   padding: 0px;
-  margin-left: auto;
+}
+@media (min-width: 60em) {
+  .menu-items {
+    margin-left: auto;
+  }
 }
