--- a/css/layout.css
+++ b/css/layout.css
@@ -4,6 +4,9 @@ body {
   padding-left: 1rem;
   padding-right: 1rem;
   display: block;
+
+  font-family: DIN, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue", sans-serif;
 }
 @media (min-width: 30em) {
   body {
