--- a/css/social.css
+++ b/css/social.css
@@ -6,6 +6,10 @@
   letter-spacing: 0.2em;
 }
 
+.social-text a {
+  margin-right: 0.5em;
+}
+
 .social-text a > img {
   height: 38px;
   width: 38px;
