--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,10 @@
 body {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
   padding-left: 1rem;
   padding-right: 1rem;
   display: block;
-
+  background-color: antiquewhite;
   font-family: DIN, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue", sans-serif;
 }
